--- a/Client/NodeExam/src/app.css
+++ b/Client/NodeExam/src/app.css
@@ -17,11 +17,13 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: orange;
   text-decoration: inherit;
+  -webkit-text-stroke: 1px black;
 }
 a:hover {
-  color: #535bf2;
+  color: blue;
+  -webkit-text-stroke: 1px black;
 }
 
 body {
