--- a/Client/NodeExam/src/app.css
+++ b/Client/NodeExam/src/app.css
@@ -15,6 +15,16 @@
   -webkit-text-size-adjust: 100%;
 }
 
+@font-face {
+  font-family: "ninjanaruto";
+  src: url(../../../public/njnaruto.ttf);
+}
+
+p {
+  font-size: 16px;
+  margin: 0;
+}
+
 a {
   font-weight: 500;
   color: orange;
@@ -27,17 +37,168 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+    font-family: "ninjanaruto";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    -webkit-text-stroke: 1px black;
+  }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 60px;
+  margin: 0;
+  font-family: "ninjanaruto";
+  -webkit-text-stroke: 1.5px black;
+  color: orange;
+  padding: 40px;
 }
+
+h2 {
+  margin: 0;
+  padding: 10px;
+  color: orange;
+  font-size: 2rem;
+  font-weight: bold;
+  font-family: "ninjanaruto";
+  -webkit-text-stroke: 2px black;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-family: "ninjanaruto";
+  -webkit-text-stroke: 1px black;
+}
+
+form {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: rgba(51, 51, 51, 0.6);
+  border-radius: 5px;
+  font-family: "ninjanaruto";
+  color: orange;
+  -webkit-text-stroke: 1px black;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+  font-family: "ninjanaruto";
+  color: orange;
+  -webkit-text-stroke: 1px black;
+}
+
+input {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 5px;
+  box-sizing: border-box;
+  font-family: "ninjanaruto";
+  color: orange;
+  -webkit-text-stroke: 1px black;
+}
+
+textarea {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 5px;
+  box-sizing: border-box;
+  font-family: "ninjanaruto";
+  color: orange;
+  -webkit-text-stroke: 1px black;
+}
+
+table {
+  width: 70%;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: rgba(51, 51, 51, 0.6);
+  border-radius: 5px;
+  font-family: "ninjanaruto";
+  color: orange;
+  -webkit-text-stroke: 1px black;
+}
+
+button {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-top: 30px;
+  border: 1px solid black;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  font-family: "ninjanaruto";
+  font-size: 16px;
+  color: orange;
+  background: #0c2fdf;
+  -webkit-text-stroke: 1px black;
+}
+
+button:hover {
+  background-color: orange;
+  color: #0c2fdf;
+}
+
+input:hover {
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+input::placeholder {
+  color: orange;
+}
+
+textarea:hover {
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+textarea::placeholder {
+  color: orange;
+}
+
+::placeholder {
+  color: #999;
+  font-size: 14px;
+}
+
+.fixed-div {
+  position: static;
+  padding: 15px;
+}
+
+.container {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 30px;
+  background-color: rgba(51, 51, 51, 0.6);
+  border-radius: 5px;
+}
+
+#signout {
+  display: block;
+  width: 15%;
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  font-family: "ninjanaruto";
+  font-size: 26px;
+  color: orange;
+  background: #0c2fdf;
+  -webkit-text-stroke: 1px black;
+}
+
+.ignore-css{all:unset;}
 
 .card {
   padding: 2em;
@@ -48,25 +209,6 @@ h1 {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
